[tool.poetry]
name = "github-dl"
version = "0.1.0"
description = "Download GitHub repos with all metadata (issues, PRs, etc.)."
authors = ["Andrew Chow <achow101-github@achow101.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
GitPython = "^3.1.11"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
